# dmxstuff

./: .gitignore  README.md
DMXScript/: .cproject  .project  DMXChannelCollection.cpp  DMXChannelCollection.h  channelController.cpp  channelController.h  controllerCollection.cpp  controllerCollection.h  example.dmx  parser.cpp
DMXScript/perl/: DMXexpression.pm  Makefile  dmxevents.pm  dmxinterface.c  dmxinterface.i  dmxinterface.pm  dmxrun.pl  example.dmx
dmxd/: Makefile  dmxd.c  dmxdummy.c  dmxtest.c
k8062/: Makefile  aseqdump.c  aseqdump.h  blackout.cpp  k8062.cpp  sinewaves.cpp  synesthesizer.cpp  timer.h
k8062/k8062forlinux/: Makefile  aseqdump.c  dmxd.c
k8062mon/: Makefile.am  Makefile.in  configure  configure.in  k8062mon.glade  k8062mon.gladep
k8062mon/autom4te.cache/: output.1  requests  traces.0  traces.1
k8062mon/src/: Makefile.am  Makefile.in  callbacks.c  callbacks.h  channels.cpp  channels.h  interface.c  interface.c.bak  interface.h  k8062.cpp  k8062.h  main.c  settings.cpp  settings.h  ui.cpp
src/: Makefile  adsr.cpp  adsr.h  aseqdump.c  aseqdump.h  blackout.cpp  channel.cpp  channel.h  k8062.cpp  k8062.h  main.cpp  mainwindow.cpp  mainwindow.h  note.cpp  note.h  sinewaves.cpp  synesthesizer.cpp  synesthesizer.h  synesthesizer.pro  whiteout.cpp
